Added GitHub repository link to the About Us section in index.html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
       <tr><td>Vedant Pawar</td><td>23202A0020</td></tr>
     </tbody>
   </table>
+  <p style="margin-top: 12px; font-size: 14px; color: #000000;">
+    <strong>GitHub Repository:</strong> 
+    <a href="https://github.com/AradhyaPatil/page-replacement-micro-project" target="_blank" rel="noopener noreferrer" style="color: #2563eb; text-decoration: none;">
+      https://github.com/AradhyaPatil/page-replacement-micro-project
+    </a>
+  </p>
 </section>
 
 </main>
